--- a/demo.html
+++ b/demo.html
@@ -240,6 +240,20 @@
 		.dropdown-menu .drop-1{
 			display: block;
 		}
+		.content-right{
+			width: 85%;
+		    width: -moz-calc(100% - 280px);
+		    width: -webkit-calc(100% - 280px);
+		    width: calc(100% - 280px);
+		    float: left;
+		    position: relative;
+		    min-height: 200px;
+		    padding-right: 20px;
+		    padding-left: 20px;
+		    padding-top: 20px;
+		    background-color: #fff;
+		    margin-left: 250px;
+		}
 	</style>
 </head>
 <body>
@@ -384,6 +398,10 @@
 						<hr>			
 					</div>
 				</div>								
+			</div>
+			<!-- 噢 在这停顿！！ -->
+			<div class="content-right">
+				
 			</div>
 		</div>
 	</div>
